5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_579.log
== TEST (2019-04-11 18:53:40) 
-- CODE:
print("A UFAM tem"",2016 - xxx," "anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016 - xxx,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:54:50) 
-- CODE:
print("A UFAM tem"",2016 - 1909," "anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016 - 1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:56:08) 
-- CODE:
print("A UFAM tem"",2016_1909," "anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016_1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:56:48) 
-- CODE:
print("A UFAM tem"", 2016 - 1909,"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem"", 2016 - 1909,"anos de fundacao.")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:57:02) 
-- CODE:
print("A UFAM tem"", 2016 - 1909,""anos de fundacao.")
-- OUTPUT:
A UFAM tem, 2016 - 1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:57:43) 
-- CODE:
print("A UFAM tem"", 2016 - 1909,""anos de fundacao.")
print(2016-1909)
-- OUTPUT:
A UFAM tem, 2016 - 1909,anos de fundacao.
107
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:57:47) 
-- CODE:
print("A UFAM tem"", 2016 - 1909,""anos de fundacao.")
print(2016-1909)
-- EXECUTION TIME:
0.192243
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem, 2016 - 1909,anos de fundacao.
107
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:15) 
-- CODE:
print("A UFAM tem"", (2016 - 1909),""anos de fundacao.")
-- OUTPUT:
A UFAM tem, (2016 - 1909),anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:53) 
-- CODE:
print("A UFAM tem"", (2016 - 1909),anos de fundacao.")
-- OUTPUT:
A UFAM tem, (2016 - 1909),anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:58) 
-- CODE:
print("A UFAM tem"", (2016 - 1909),anos de fundacao.")
-- OUTPUT:
A UFAM tem, (2016 - 1909),anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:59:07) 
-- CODE:
print("A UFAM tem"", 2016 - 1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem, 2016 - 1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:59:49) 
-- CODE:
print("A UFAM tem"", 2016 menos 1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem, 2016 menos 1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:00:11) 
-- CODE:
print("A UFAM tem"", 2016 -1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem, 2016 -1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:01:01) 
-- CODE:
print("A UFAM tem"", float(2016 -1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem, float(2016 -1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:02:14) 
-- CODE:
print("A UFAM tem"",2016 -1909,"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem"",2016 -1909,"anos de fundacao.")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:02:20) 
-- CODE:
print("A UFAM tem"",2016 -1909,"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem"",2016 -1909,"anos de fundacao.")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:02:31) 
-- CODE:
print("A UFAM tem"",2016 -1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016 -1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:02:34) 
-- CODE:
print("A UFAM tem"",2016 -1909,anos de fundacao.")
-- EXECUTION TIME:
0.156463
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem,2016 -1909,anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:02:36) 
-- CODE:
print("A UFAM tem"",2016 -1909,anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016 -1909,anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:03:09) 
-- CODE:
print("A UFAM tem"",2016 -1909, " anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem"",2016 -1909, " anos de fundacao.")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:05:02) 
-- CODE:
print("A UFAM tem",2016-1909, "anos de fundacao."")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem",2016-1909, "anos de fundacao."")
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:24) 
-- CODE:
print("A UFAM tem"",2016-xxxx, anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016-xxxx, anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:01) 
-- CODE:
print("A UFAM tem"",2016-xxxx, anos de fundacao.")
print(xxx=1909)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(xxx=1909)
TypeError: 'xxx' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:21) 
-- CODE:
print("A UFAM tem"",2016--1909, anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016--1909, anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:53) 
-- CODE:
print("A UFAM tem"",2016 - 1909, ''anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016 - 1909, ''anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:42) 
-- CODE:
print("A UFAM tem",2016 - 1909, anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem",2016 - 1909, anos de fundacao.")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:11:11) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:11:18) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.190872
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:11:29) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:11:45) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:11:46) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.180553
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:12:01) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.180434
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:27) 
-- CODE:
print("A UFAM tem", "2016 - 1909"",""anos de fundacao")
-- OUTPUT:
A UFAM tem 2016 - 1909,anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:58) 
-- CODE:
print("A UFAM tem", 2016 - 1909,""anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909,""anos de fundacao.")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:13:07) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:13:10) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.192274
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
